# NetworksLabs

./: .gitignore  .gitmodules
lab1/: Makefile  client1.cpp  server1.cpp
lab2/: Makefile  defines.hpp  messaging.cpp  task.md
lab2/client/: main.cpp
lab2/server/: main.cpp  server.cpp  server.hpp
lab3/: CMakeLists.txt  defines.hpp  messaging.cpp  messaging.hpp  task.md
lab3/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
lab3/server/: CMakeLists.txt  client_session.cpp  client_session.hpp  main.cpp  server.cpp  server.hpp  session_registry.cpp
lab3/server/thread_pool/: thread_pool.hpp
lab4/: defines.hpp  messaging.cpp  messaging.hpp  task.md
lab4/client/: client.cpp  client.hpp  main.cpp
lab4/messaging/: messaging.hpp
lab4/server/: client_session.cpp  client_session.hpp  main.cpp  server.cpp  session_registry.cpp  session_registry.hpp
lab5/: CMakeLists.txt  chat_history.jsonl  defines.hpp  task.md
lab5/client/: client.cpp  client.hpp  main.cpp
lab5/logger/: logger.cpp  logger.hpp
lab5/messaging/: messaging.cpp  messaging.hpp
lab5/server/: CMakeLists.txt  client_session.hpp  main.cpp  session_registry.cpp  session_registry.hpp
lab5/src/: CMakeLists.txt  defines.hpp  time_formatting.cpp
lab5/src/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
lab5/src/json/: json.cpp  json.hpp
lab5/src/logger/: logger.cpp  logger.hpp
lab5/src/messaging/: messaging.cpp  messaging.hpp
lab5/src/server/: client_session.cpp  client_session.hpp  main.cpp  session_registry.cpp  session_registry.hpp
lab5/src/server/thread_pool/: thread_pool.cpp  thread_safe_queue.hpp
